--- a/TODO.txt
+++ b/TODO.txt
@@ -10,10 +10,10 @@ DONE	- calculate accuracy (%)
  	- TYPES : single-digit-addition, double-digit, multi-digit, multi-operand, mixed-operator, etc.
 - Focus first of addition.
 - Add difficulty
-	- 2,3,4 digit operands
-	- random length digit operands (between 0 and 4)
+DONE	- 2,3,4 digit operands
+DONE	- random length digit operands (between 0 and 4)
 	- remove 0 from list of possible operands (or reduce frequency)
-	- decide whether single digit problems should have a single line format ( x + y = ___) and the larger (>= 2) digit problems should change their format to multi-line (x /n y +/n)?
+DONE	- decide whether single digit problems should have a single line format ( x + y = ___) and the larger (>= 2) digit problems should change their format to multi-line (x /n y +/n)?
 	- add multiple (> 2) operand problems
 DONE - Keep a question up until answered correctly.
 
